[tool.poetry]
name = "vpsbuild"
version = "0.1.0"
description = ""
authors = ["Jonathan Lloyd <jonathan@thisisjonathan.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fabric = "^3.0.0"
envpy = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
